apps/pont-acier/wordpress/prod/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: wordpress
  namespace: pontacier
spec:
  virtualhost:
    fqdn: pontacier.etsmtl.ca
    tls:
      secretName: tls-pontacier
  routes:
    - conditions:
        - prefix: /
      services:
        - name: pont-wordpress
          port: 80
      requestHeadersPolicy:
        set:
          - name: X-Forwarded-Proto
            value: https
